# SPDX-FileCopyrightText: 2021-2022 Joonas Javanainen <joonas.javanainen@gmail.com>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "moca-hcho"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloc-cortex-m = "0.4"
anyhow = { version = "1.0", default-features = false }
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = { version = "0.3", features = ["alloc"] }
embassy = { version = "0.1", features = ["defmt"] }
embassy-nrf = { version = "0.1", features = ["defmt", "nrf52832", "gpiote", "time-driver-rtc1"] }
embassy-traits = { version = "0.1", features = ["defmt"] }
embedded-hal = "0.2"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
nrf-softdevice = { version = "0.1", features = ["defmt", "nrf52832", "s112", "ble-peripheral", "critical-section-impl"] }
nrf-softdevice-defmt-rtt = "0.1"
nrf-softdevice-s112 = "0.1"
panic-probe = { version = "0.3", features= ["print-defmt"] }
sfa30 = { path = "../sfa30", default-features = false }

[patch.crates-io]
embassy = { git = "https://github.com/embassy-rs/embassy.git", rev = "dce3f8c47df611b51c47559ba8f4c301eb86af95" }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "dce3f8c47df611b51c47559ba8f4c301eb86af95" }
embassy-macros = { git = "https://github.com/embassy-rs/embassy.git", rev = "dce3f8c47df611b51c47559ba8f4c301eb86af95" }
embassy-traits = { git = "https://github.com/embassy-rs/embassy.git", rev = "dce3f8c47df611b51c47559ba8f4c301eb86af95" }
nrf-softdevice = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "6a01c4ceb7d1f1d9fc06e74e9a264037ac1159c5" }
nrf-softdevice-defmt-rtt = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "6a01c4ceb7d1f1d9fc06e74e9a264037ac1159c5" }
nrf-softdevice-s112 = { git = "https://github.com/embassy-rs/nrf-softdevice.git", rev = "6a01c4ceb7d1f1d9fc06e74e9a264037ac1159c5" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
